# home_service

./: README.md
add_markers/: CMakeLists.txt  package.xml
add_markers/src/: add_markers.cpp
add_markers/srv/: CreateMarker.srv  DeleteMarker.srv
home_service_robot/: CMakeLists.txt  package.xml
home_service_robot/launch/: amcl.launch  robot_description.launch  world.launch
home_service_robot/maps/: my_map.pgm  my_map.yaml
home_service_robot/urdf/: my_robot.xacro
pick_objects/: CMakeLists.txt  package.xml
pick_objects/launch/: pick_objects.launch
pick_objects/src/: pick_objects.cpp
rvizConfig/: home_service.rviz  package.xml
scripts/: add_marker.sh  home_service.sh  test_navigation.sh  test_slam.sh
