<?xml version="1.0"?>
<package format="2">
  <name>home_service_robot</name>
  <version>1.0.0</version>
  <description>The home_service_robot package</description>
  <maintainer email="tuialexandre@gmail.com">tuialexandre</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
